--- a/simple tag search/index.html
+++ b/simple tag search/index.html
@@ -8,13 +8,9 @@
 <body>
     <h1>Tag Filtering Example</h1>
     <label for="tagSelect">Select Tags:</label>
-    <select id="tagSelect" multiple>
-        <option value="All">All</option>
-        <option value="TagA">TagA</option>
-        <option value="TagB">TagB</option>
-        <option value="TagC">TagC</option>
-        <!-- Add more options as needed -->
-    </select>
+    <div id="tagButtons">
+
+    </div>
     <button id="filterButton">Filter</button>
     <div id="itemContainer">
         <!-- Display filtered items here -->
